--- a/themes/butterfly/source/css/_global/index.styl
+++ b/themes/butterfly/source/css/_global/index.styl
@@ -30,6 +30,7 @@
   --toc-link-color: $toc-link-color
   --card-box-shadow: 0 3px 8px 6px rgba(7, 17, 27, .05)
   --card-hover-box-shadow: 0 3px 8px 6px rgba(7, 17, 27, .09)
+  --style-border-hover: 1px solid #3b70fc;
   --pseudo-hover: $pseudo-hover
   --headline-presudo: #a0a0a0
   --scrollbar-color: $scrollbar-color
