--- a/themes/butterfly/source/css/_layout/pagination.styl
+++ b/themes/butterfly/source/css/_layout/pagination.styl
@@ -1,4 +1,5 @@
 #pagination
+  width: 100%;
   .pagination
     margin-top: 20px
     text-align: center
@@ -68,7 +69,7 @@
         @extend .cardHover
 
         &:hover
-          background: var(--btn-hover-color)
+          background: #d2ddf5
           color: var(--btn-color)
 
   & > div:not(.recent-posts)
