--- a/themes/butterfly/source/css/var.styl
+++ b/themes/butterfly/source/css/var.styl
@@ -67,7 +67,7 @@ $toc-mobile-maxWidth = 380px
 $toc-active-color = #fff
 // Button
 $button-color = #fff
-$button-hover-color = $themeColorEnable && hexo-config('theme_color.button_hover') ? convert(hexo-config('theme_color.button_hover')) : $light-orange
+$button-hover-color = $themeColorEnable && hexo-config('theme_color.button_hover') ? convert(hexo-config('theme_color.button_hover')) : #4e89ff
 $button-bg = $theme-color
 $pseudo-hover = $button-hover-color
 // scrollbar
