--- a/themes/butterfly/source/css/_layout/footer.styl
+++ b/themes/butterfly/source/css/_layout/footer.styl
@@ -1,6 +1,6 @@
 #footer
   position: relative
-  background-color: $light-blue
+  background-color: alpha($light-grey, 1)
   background-attachment: scroll
   background-position: bottom
   background-size: cover
